# LEVER

./: .gitignore  Makefile  README.md  config.py  dqn_experiment.md  dqn_train.md  full_experiment.py  hybrid_k_sweep.py  pi2vec_preparation.py  ppo_experiment.md  ppo_train.md  pyproject.toml  requirements.txt  reset_framework.py  search_faiss_policies.py
dqn/: __init__.py  full_experiment.py  hybrid_direct_eval.py  pi2vec_preparation.py  targeted_direct_eval.py
faiss_utils/: setup_faiss_vdb.py
pi2vec/: pi2vec_utils.py  psimodel.py  train_regressor.py  train_successor.py
plots/: compare_compositions.py  compare_compositions_average.py  compare_compositions_average_dqn.py  compare_compositions_dqn.py  compare_hybrid_direct_average.py  compare_hybrid_direct_average_dqn.py  compare_targeted_direct_average.py  compare_targeted_direct_average_dqn.py
policy_reusability/: DAG.py  pruning.py
policy_reusability/data_generation/deeprl/: train_dqn.py  train_ppo.py
policy_reusability/data_generation/tabular/: generate_states_batch.py
policy_reusability/env/: gridworld.py  lever_minigrid.py
policy_reusability/my_work/: generate_q_tables.py  generate_states.py  generate_states_multi.py  init_gridworld.py  try_belman_updates.py  try_train_gridworld.py
ppo/: __init__.py  full_experiment.py  hybrid_direct_eval.py  pi2vec_preparation.py  targeted_direct_eval.py
tabular/: __init__.py  full_experiment.py  hybrid_direct_eval.py  pi2vec_preparation.py  targeted_direct_eval.py
